layout bug fixes

--- a/src/components/Inheritance/Inheritance.module.scss
+++ b/src/components/Inheritance/Inheritance.module.scss
@@ -2,7 +2,7 @@
 	width: 639.552px;
 	min-height: 100%;
 	max-height: 92.594vh;
-	overflow-y: scroll;
+	overflow-y: hidden;
 
 	padding: 24px 47.5px 47px;
 
@@ -23,6 +23,7 @@
 @media (max-width: 1280px) {
 	.Main {
 		width: 426.368px;
+		padding: 16px 47.5px 32px;
 	}
 }
 @media (min-width: 2560px) {
