--- a/src/components/InheritanceForm/InheritanceForm.module.scss
+++ b/src/components/InheritanceForm/InheritanceForm.module.scss
@@ -180,6 +180,7 @@ input.supportSlider {
 	}
 }
 .submitButton {
+	z-index: 2;
 	align-self: center;
 	display: flex;
 	align-items: center;
@@ -299,6 +300,10 @@ input.supportSlider {
 	.submitButton {
 		padding: 32px;
 		font-size: 32px;
+
+		svg {
+			transform: rotate(-90deg) scale(1.33);
+		}
 	}
 }
 @media (min-width: 3840px) {
@@ -369,5 +374,9 @@ input.supportSlider {
 	.submitButton {
 		padding: 48px;
 		font-size: 48px;
+
+		svg {
+			transform: rotate(-90deg) scale(2);
+		}
 	}
 }
