--- a/src/components/UI/ParentDropout/ParentDropout.module.scss
+++ b/src/components/UI/ParentDropout/ParentDropout.module.scss
@@ -6,7 +6,7 @@
 }
 .main {
 	position: relative;
-	//overflow: hidden;
+	overflow: hidden;
 	height: 100%;
 	flex-direction: column;
 	&.isOpen {
@@ -38,7 +38,7 @@
 
 	max-height: 398px;
 	margin: -30px -40px 0;
-	padding: 20px 40px 0;
+	padding: 20px 40px 14%;
 
 	&::-webkit-scrollbar {
 		width: 4px;
